Fix issues found on stackoverflow.com

--- a/app/css/action-form.scss
+++ b/app/css/action-form.scss
@@ -32,3 +32,7 @@
     }
   }
 }
+
+.post-text {
+  width: 100%;
+}
